--- a/FundamentosJS/DOM.html
+++ b/FundamentosJS/DOM.html
@@ -1,61 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundamentos de JS</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/app.css">
-</head>
-<body>
-    <header>
-        <h1>Fundamentos de JavaScript - DOM</h1>
-        <p>Por: Juan Pablo De la torre Valdez
-            <a href="https://twitter.com/codigoconjuan">@codigoconjuan</a>
-        </p>
-    </header>
+<html lang="es">
+    <head>
+        <meta charset="utf-8">
+        <title>Aprendiendo JavaScript Moderno </title>
+        <link rel="stylesheet" href="css/output.css">
+    </head>
+
+    <body class="bg-slate-50">
+        <header class="bg-gray-800">
+            <div class="mx-auto max-w-7xl py-16 px-4 sm:py-24 sm:px-6 lg:flex lg:justify-between lg:px-8">
+                <div class="max-w-2xl">
+                    <h2 class="text-4xl font-bold tracking-tight text-white sm:text-5xl lg:text-6xl">
+                        Introducción JavaScript Moderno para React y TypeScript
+                    </h2>
+                    <p class="mt-3 text-xl text-gray-400">
+                        Introducción JavaScript Moderno por Código Con Juan
+                    </p>
+                    <p class="mt-3 text-2xl text-gray-400">
+                        React y TypeScript - La Guía Completa Creando +10 Proyectos
+                    </p>
+                    <nav class="mt-5 flex gap-4">
+                        <a class="bg-cyan-500 hover:bg-cyan-300 px-5 py-3 rounded-lg font-black uppercase text-sm"
+                            href="index.html">Fundamentos JS</a>
+                        <a class="bg-cyan-500 hover:bg-cyan-300 px-5 py-3 rounded-lg font-black uppercase text-sm"
+                            href="DOM.html">JS Intermedio - DOM</a>
+                    </nav>
+                    <nav class="flex gap-5 mt-10">
+                        <a target="_blank" class="font-bold text-white uppercase" href=""
+                            rel="nofollow noopener noreferrer">Visita mi sitio</a>
+                        <a target="_blank" class="font-bold text-white uppercase" href=""
+                            rel="">Sígueme en Twitter</a>
+                    </nav>
+                </div>
+            </div>
+        </header>
+
+        <div class="bg-cyan-500 py-1"></div>
+        <div class="mx-auto max-w-7xl p-16 bg-white shadow-lg my-10 rounded-lg text-2xl ">
+            <h1 class="text-4xl font-black heading">JavaScript Intermedio - Manipulación de DOM </h1>
+
+            <div id="tecnologias" class="mt-5">
+                <p id="JavaScript">JavaScript</p>
+                <p class="react">React.js</p>
+                <p>Node.js</p>
+            </div>
+
+            <nav class="navegacion my-5 flex gap-5">
+                <a href="#">Enlace 1</a>
+                <a href="#">Enlace 2</a>
+                <a href="#">Enlace 3</a>
+                <a href="#">Enlace 4</a>
+            </nav>
 
 
-    <div class="DOM">
-        <h2 class="heading" id="heading">Probando el DOM</h2>
-        <nav class="navegacion">
-            <a href="#">Enlace 1</a>
-            <a href="#">Enlace 2</a>
-            <a href="#">Enlace 3</a>
-            <a href="#">Enlace 4</a>
-        </nav>
+            <form id="formulario" class="flex flex-col gap-5 py-10 px-5 shadow bg-gray-50 mx-auto max-w-lg mt-10">
+                <legend class="font-black">Iniciar Sesión</legend>
+                <input type="text" placeholder="Tu Nombre" id="nombre" class="p-2 rounded-lg text-sm">
 
-        <div class="tecnologias">
-            <p id="JavaScript">JavaScript</p>
-            <p class="react">React.js</p>
-            <p>Node.js</p>
+                <input type="password" placeholder="Tu Password" id="password" class="p-2 rounded-lg text-sm">
+
+                <input type="submit" value="Iniciar Sesión"
+                    class="bg-cyan-500 hover:bg-cyan-600 text-sm uppercase p-2 font-black text-white cursor-pointer">
+            </form>
         </div>
 
-        <form id="formulario">
-            <input 
-                type="text"
-                placeholder="Tu Nombre"
-                id="nombre"
-                class="nombre"
-            >
+        
+    </body>
 
-            <input 
-                type="password"
-                placeholder="Tu Password"
-                id="password"
-                class="password"
-            >
-
-            <input 
-                type="submit"
-                value="Login"
-            >
-        </form>
-      
-    </div>
-</body>
 </html>
