perdon por este mini cambio

--- a/FundamentosJS/index.html
+++ b/FundamentosJS/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
-        <title>Aprendiendo JavaScript Moderno - Codigo Con Juan</title>
+        <title>Aprendiendo JavaScript Moderno </title>
         <link rel="stylesheet" href="css/output.css">
     </head>
     <body class="bg-slate-50">
@@ -13,7 +13,7 @@
                         Introducción JavaScript Moderno para React y TypeScript
                     </h2>
                     <p class="mt-3 text-xl text-gray-400">
-                        Introducción JavaScript Moderno por Código Con Juan
+                        Introducción JavaScript Moderno
                     </p>
                     <p class="mt-3 text-2xl text-gray-400">
                         React y TypeScript - La Guía Completa Creando +10 Proyectos
